# ddbcore

./: .env.testing  Cargo.toml  LICENSE  README.md  docker-compose.testing.yml
crates/ddbcore/: Cargo.toml
crates/ddbcore-mysql/: Cargo.toml
crates/ddbcore-mysql/src/: bulk.rs  connection.rs  ddl.rs  lib.rs  query.rs  reflect.rs  stream.rs  types.rs  util.rs
crates/ddbcore-mysql/tests/: contract.rs
crates/ddbcore-postgres/: Cargo.toml
crates/ddbcore-postgres/benches/: copy_encode.rs
crates/ddbcore-postgres/examples/: reflect_smoke_test.rs
crates/ddbcore-postgres/src/: bulk.rs  connection.rs  ddl.rs  lib.rs  query.rs  reflect.rs  stream.rs  types.rs  util.rs
crates/ddbcore-postgres/tests/: contract.rs
crates/ddbcore-testkit/: Cargo.toml
crates/ddbcore-testkit/src/: lib.rs  testenv.rs
crates/ddbcore/src/: adapter.rs  error.rs  lib.rs  schema.rs  types.rs  value.rs
