[workspace]
resolver = "2"
members = ["crates/ddbcore", "crates/ddbcore-postgres", "crates/ddbcore-testkit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daemon Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Daemon-Labs-Co/ddbcore"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
tracing = "0.1"

ddbcore = { path = "crates/ddbcore" }
ddbcore-testkit = { path = "crates/ddbcore-testkit" }
