[package]
name = "ddbcore-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL adapter for DDBCore"

[dependencies]
ddbcore.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal = { workspace = true, features = ["db-postgres"] }
tokio.workspace = true
tracing.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }
